tests/__snapshots__/api-toAcceptProps-special-cases-stderr.snap.txt
Error: Component accepts props of the given type.

   8 | 
   9 |     expect(Default).type.toAcceptProps({ one: "sample" });
  10 |     expect(Default).type.not.toAcceptProps({ one: "sample" }); // fail
     |                              ~~~~~~~~~~~~~
  11 | 
  12 |     expect(Default).type.not.toAcceptProps({});
  13 |     expect(Default).type.toAcceptProps({}); // fail

       at ./__typetests__/special-cases.tst.tsx:10:30 ❭ special cases ❭ when the 'props' argument has a default value

Error: Component does not accept props of the given type.

Property 'one' is missing in type '{}' but required in type '{ one: string; }'.

  11 | 
  12 |     expect(Default).type.not.toAcceptProps({});
  13 |     expect(Default).type.toAcceptProps({}); // fail
     |                          ~~~~~~~~~~~~~
  14 | 
  15 |     expect(Default).type.not.toAcceptProps({ two: false });
  16 |     expect(Default).type.toAcceptProps({ two: false }); // fail

       at ./__typetests__/special-cases.tst.tsx:13:26 ❭ special cases ❭ when the 'props' argument has a default value

    'one' is declared here. ts(2728)

      3 | describe("special cases", () => {
      4 |   test("when the 'props' argument has a default value", () => {
      5 |     function Default(props = { one: "sample" }) {
        |                                ~~~~~~~~~~~~~
      6 |       return <>{`${props}`}</>;
      7 |     }
      8 | 

          at ./__typetests__/special-cases.tst.tsx:5:32

Error: Component does not accept props of the given type.

Type '{ two: boolean; }' is not assignable to type 'IntrinsicAttributes & { one: string; }'.
Property 'two' does not exist on type 'IntrinsicAttributes & { one: string; }'.

  14 | 
  15 |     expect(Default).type.not.toAcceptProps({ two: false });
  16 |     expect(Default).type.toAcceptProps({ two: false }); // fail
     |                                                     ~~~
  17 | 
  18 |     expect(Default).type.not.toAcceptProps({ one: false });
  19 |     expect(Default).type.toAcceptProps({ one: false }); // fail

       at ./__typetests__/special-cases.tst.tsx:16:53 ❭ special cases ❭ when the 'props' argument has a default value

Error: Component accepts props of the given type.

  16 |     expect(Default).type.toAcceptProps({ two: false }); // fail
  17 | 
  18 |     expect(Default).type.not.toAcceptProps({ one: false });
     |                              ~~~~~~~~~~~~~
  19 |     expect(Default).type.toAcceptProps({ one: false }); // fail
  20 |   });
  21 | 

       at ./__typetests__/special-cases.tst.tsx:18:30 ❭ special cases ❭ when the 'props' argument has a default value

Error: Component does not accept props of the given type.

Type 'boolean' is not assignable to type 'string'.

  17 | 
  18 |     expect(Default).type.not.toAcceptProps({ one: false });
  19 |     expect(Default).type.toAcceptProps({ one: false }); // fail
     |                          ~~~~~~~~~~~~~
  20 |   });
  21 | 
  22 |   test("when the 'props' is a union", () => {

       at ./__typetests__/special-cases.tst.tsx:19:26 ❭ special cases ❭ when the 'props' argument has a default value

    The expected type comes from property 'one' which is declared here on type 'IntrinsicAttributes & { one: string; }' ts(6500)

      3 | describe("special cases", () => {
      4 |   test("when the 'props' argument has a default value", () => {
      5 |     function Default(props = { one: "sample" }) {
        |                                ~~~~~~~~~~~~~
      6 |       return <>{`${props}`}</>;
      7 |     }
      8 | 

          at ./__typetests__/special-cases.tst.tsx:5:32

Error: Component accepts props of the given type.

  33 | 
  34 |     expect(OneOrTheOther).type.toAcceptProps({ one: "Pass" });
  35 |     expect(OneOrTheOther).type.not.toAcceptProps({ one: "Pass" }); // fail
     |                                    ~~~~~~~~~~~~~
  36 | 
  37 |     expect(OneOrTheOther).type.toAcceptProps({ two: "Pass" });
  38 |     expect(OneOrTheOther).type.not.toAcceptProps({ two: "Pass" }); // fail

       at ./__typetests__/special-cases.tst.tsx:35:36 ❭ special cases ❭ when the 'props' is a union

Error: Component accepts props of the given type.

  36 | 
  37 |     expect(OneOrTheOther).type.toAcceptProps({ two: "Pass" });
  38 |     expect(OneOrTheOther).type.not.toAcceptProps({ two: "Pass" }); // fail
     |                                    ~~~~~~~~~~~~~
  39 | 
  40 |     expect(OneOrTheOther).type.not.toAcceptProps({ one: "Fail", two: "Fail" });
  41 |     expect(OneOrTheOther).type.toAcceptProps({ one: "Fail", two: "Fail" }); // fail

       at ./__typetests__/special-cases.tst.tsx:38:36 ❭ special cases ❭ when the 'props' is a union

Error: Component does not accept props of the given type.

Type '{ one: string; two: string; }' is not assignable to type 'IntrinsicAttributes & (One | Other)'.
Types of property 'two' are incompatible.
Type 'string' is not assignable to type 'undefined'.

  39 | 
  40 |     expect(OneOrTheOther).type.not.toAcceptProps({ one: "Fail", two: "Fail" });
  41 |     expect(OneOrTheOther).type.toAcceptProps({ one: "Fail", two: "Fail" }); // fail
     |                                                 ~~~~~~~~~~~~~
  42 | 
  43 |     expect(OneOrTheOther).type.not.toAcceptProps({});
  44 |     expect(OneOrTheOther).type.toAcceptProps({}); // fail

       at ./__typetests__/special-cases.tst.tsx:41:49 ❭ special cases ❭ when the 'props' is a union

Error: Component accepts props of the given type.

  41 |     expect(OneOrTheOther).type.toAcceptProps({ one: "Fail", two: "Fail" }); // fail
  42 | 
  43 |     expect(OneOrTheOther).type.not.toAcceptProps({});
     |                                    ~~~~~~~~~~~~~
  44 |     expect(OneOrTheOther).type.toAcceptProps({}); // fail
  45 | 
  46 |     expect(OneOrTheOther).type.not.toAcceptProps({ three: false });

       at ./__typetests__/special-cases.tst.tsx:43:36 ❭ special cases ❭ when the 'props' is a union

Error: Component does not accept props of the given type.

Type '{}' is not assignable to type 'IntrinsicAttributes & (One | Other)'.

  42 | 
  43 |     expect(OneOrTheOther).type.not.toAcceptProps({});
  44 |     expect(OneOrTheOther).type.toAcceptProps({}); // fail
     |                                ~~~~~~~~~~~~~
  45 | 
  46 |     expect(OneOrTheOther).type.not.toAcceptProps({ three: false });
  47 |     expect(OneOrTheOther).type.toAcceptProps({ three: false }); // fail

       at ./__typetests__/special-cases.tst.tsx:44:32 ❭ special cases ❭ when the 'props' is a union

Error: Component does not accept props of the given type.

Type '{ three: boolean; }' is not assignable to type 'IntrinsicAttributes & (One | Other)'.
Property 'three' does not exist on type 'IntrinsicAttributes & (One | Other)'.

  45 | 
  46 |     expect(OneOrTheOther).type.not.toAcceptProps({ three: false });
  47 |     expect(OneOrTheOther).type.toAcceptProps({ three: false }); // fail
     |                                ~~~~~~~~~~~~~
  48 |   });
  49 | });
  50 | 

       at ./__typetests__/special-cases.tst.tsx:47:32 ❭ special cases ❭ when the 'props' is a union

